--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
     <link rel="stylesheet" href='/css/styles.css'>
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Cabin+Condensed" rel="stylesheet">
     <title>Word Count!</title>
   </head>
   <body>
