--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h1>Word Count</h1>
   <form action="/test_word">
-    <div class="form-group">
+    <div class="form-group well">
       <label for="sentence">Enter your sentence below:</label>
       <input id="sentence" type="text" name="sentence" class="form-control">
       <br>
