change the color of the button

--- a/views/word_count_result.erb
+++ b/views/word_count_result.erb
@@ -7,7 +7,7 @@
       <br>
       <label for="word">Enter a word you would like to count from your sentence:</label>
       <input id="word" type="text" name="word" class="form-control">
-      <button type="submit" class="btn">Submit</button>
+      <button type="submit" class="btn btn-info">Submit</button>
     </div>
   </form>
 
